fix: align main nav flag button

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -59,12 +59,13 @@
 }
 
 .header__language-switcher {
-  display: none;
   align-items: center;
+  border-radius: $border-radius-sm;
+  display: none;
   justify-content: center;
+  margin-bottom: rem(-4);
   margin-left: rem(32);
   padding: rem(8);
-  border-radius: $border-radius-sm;
   transition: background-color $transition-base;
 
   @include focus-visible;
